chandeliers-lus/tests/compile_fail/ui/tc/const/then.rs
//! Trying to use a temporal operator in a `const` context.
chandeliers_lus::decl! {
    const X : int = 0 -> 1;
}

fn main() {}
