chandeliers-lus/tests/compile_fail/ui/tc/const/then.stderr
error: The later operator (-> / fby) is not valid in const contexts
 --> tests/fail/ui/tc/const/then.rs:2:21
  |
2 |     const X : int = 0 -> 1;
  |                     ^^^^^^
  |
  = note: You must put this definition inside a node
